fixed buttons on small screens

--- a/public/stylesheets/dynamicstyles.css
+++ b/public/stylesheets/dynamicstyles.css
@@ -124,7 +124,7 @@
         --toolcontainer-height: 80vh;
         --footer-height: 4%;
 
-        --btn-group-btn: 55px;
+        --btn-group-btn: 40px;
 
         /* New Section Here */
         --inner-main-content-max-width: 81vw;
